Change footer padding.

--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
     </main>
 
     <!-- Contact Form -->
-    <article class="container form-wrap mt-5 text-light text-center" id="contact">
+    <article class="container form-wrap py-5 text-light text-center" id="contact">
         <div class="row">
             <h3 class="py-3">Get in touch</h3>
         </div>
         <div class="row">
-            <div class="col col-md-6 mx-auto">
+            <div class="col col-md-6 col-lg-4 mx-auto">
                 <form action="">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
