Add page nav layout.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <link href="./assets/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet">
 </head>
   <body>
-
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-sm navbar-light bg-primary">
+        <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+              <li class="nav-item mx-5">
+              <a class="nav-link p-0 active text-light" aria-current="page" href="#about">About</a>
+              </li>
+              <li class="nav-item mx-5">
+              <a class="nav-link p-0 text-light" href="#main">Projects</a>
+              </li>
+              <li class="nav-item mx-5">
+                 <a class="nav-link p-0 text-light" href="#footer">Contact</a>
+              </li>
+           </ul>
+        </div>
+        </div>
+     </nav>
 
 
     <script src="./scripts/jQuery.js"></script>
