Fix headerr button transform and add href to it. Add contact form button with styles.

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
       </div>
       <div class="row">
          <div class="col-12 position-relative">
-            <a id="btn-header" class="btn-header expanded fadeIn fadeDown">
+            <a class="btn-header expanded fadeIn fadeDown" href="mailto:contact@devpat.online?&bcc=patrykowo@gmail.com&subject=Interview" id="btn-header">
                <span class="btn-text">Contact Me</span>
                <span class="btn-icon"><i class="fa-regular fa-envelope"></i></span>
             </a>
@@ -1164,6 +1164,9 @@
                   </div>
                   <div class="m-4">
                      <textarea name="content" class="form-control text-light input-textarea p-2" id="" cols="30" rows="5" placeholder="Let me know what do you think!"></textarea>
+                  </div>
+                  <div class="m-4 text-center">
+                     <button class="form-control btn rounded-pill px-4 w-auto btn-footer" type="submit">Submit</button>
                   </div>
                </form>
             </div>
