Fix cube nav position.

--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
             </div>
          </div>
          <!-- main content nav -->
-         <div class="col-10 col-md-5 col-lg-3 col-xxl-2">
+         <div class="col-10 col-md-5 col-lg-3 col-xxl-2 mx-auto">
             <ul class="radio-group cube__nav p-3 overflow-hidden">
                <li>
                   <input id="front" class="d-none" type="radio" name="rotate-cube-side" value="front" checked />
