Add project's description.

--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
                      </div>
                   </div>
                   <div class="cube__face cube__face--back d-flex align-items-center">
-                     <p class="text-light lh-base p-2 p-xl-5 fs-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cum maiores, accusantium sint fuga id aliquid placeat corrupti odio amet, magnam odit ut consectetur.</p>
+                     <p class="text-light lh-base p-2 p-xl-5 fs-3">Mobile-first, fully responsive CMS/CRUD web application. Build with Laravel and Bootstrap. Image/Intervention scales uploaded image to three diffrent sizes to be able to optimize page loading. Server detects which image size to provide. <span class="fst-italic">Slow loading might be caused due to shared hosting server.</span></p>
                   </div>
                   <div class="cube__face cube__face--right lh-base d-flex justify-content-center flex-column">
                      <h4 class="py-1 fw-bold">Technologies</h4>
