--- a/index.html
+++ b/index.html
@@ -121,9 +121,6 @@
                   style="stroke-width:1.00197" />
                <style
                   id="style331">
-               .blue {
-                  
-               }
                </style>
                <path
                   class="blue"
@@ -1093,7 +1090,7 @@
                      </div>
                   </div>
                   <div class="cube__face cube__face--back d-flex align-items-center">
-                     <p class="text-light lh-base p-2 p-xl-5 fs-3">Mobile-first, fully responsive CMS/CRUD web application. Build with Laravel and Bootstrap. Image/Intervention scales uploaded image to three diffrent sizes to be able to optimize page loading. Server detects which image size to provide. <span class="fst-italic">Slow loading might be caused due to shared hosting server.</span></p>
+                     <p class="text-light lh-base p-2 p-xl-5 fs-3">Mobile-first, fully responsive CMS/CRUD web application. Build with Laravel and Bootstrap. Image/Intervention used to scale images.  <span class="fst-italic">Slow loading might be caused due to shared hosting server.</span></p>
                   </div>
                   <div class="cube__face cube__face--right lh-base d-flex justify-content-center flex-column">
                      <h4 class="py-1 fw-bold">Technologies</h4>
@@ -1117,7 +1114,7 @@
          </div>
          <!-- main content nav -->
          <div class="col-10 col-md-5 col-lg-3 col-xxl-2 mx-auto">
-            <ul class="radio-group cube__nav p-3 overflow-hidden">
+            <ul class="radio-group cube__nav p-3">
                <li>
                   <input id="front" class="d-none" type="radio" name="rotate-cube-side" value="front" checked />
                   <label for="front">Norella</label>
