Fix some styles and breakpoints.

--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
    <!-- Main -->
    <main id="main" class="container-fluid py-3">
       <div class="row align-items-lg-center py-xxl-5">
-         <div class="col-12 col-lg-8 col-xxl-9 py-xxl-5 overflow-hidden">
+         <div class="col-12 col-lg-8 col-xxl-9 py-xxl-5 overflow-hidden overflow-md-visible">
             <div class="scene mx-auto">
                <div class="cube">
                   <div class="cube__face cube__face--front">
